# Study-Android

./: README.md  build.gradle  build.gradle.kts  dependency.toml  settings.gradle  settings.gradle.kts
Base-HelloWorld/: build.gradle
Base-HelloWorld/src/main/: AndroidManifest.xml
M01_Overview/C00_Temporary/: build.gradle  build.gradle.kts
M01_Overview/C00_Temporary/release/: output-metadata.json
M01_Overview/C01_HelloWorld/: build.gradle  build.gradle.kts
M02_Tool/C01_Common/S01_ADB/: build.gradle  build.gradle.kts
M02_Tool/C01_Common/S01_Logcat/: build.gradle
M02_Tool/C01_Common/S02_AVD/: build.gradle.kts
M02_Tool/C01_Common/S02_Logcat/: build.gradle  build.gradle.kts
M02_Tool/C01_Common/S03_Logcat/: build.gradle.kts
M04_System/C05_Ability/S07_NDK/src/main/cpp/: CMakeLists.txt
Media-Audio-AudioFocus/: build.gradle
Media-Common-MediaSession-Client/: build.gradle
Media-Common-MediaSession-Server/: build.gradle
Net-Common-ConnectState/: build.gradle
SYS-Broadcast-Local/: build.gradle
SYS-Broadcast-Normal/: build.gradle
SYS-Broadcast-Ordered/: build.gradle
SYS-Broadcast-System/: build.gradle
SYS-Common-Bundle/: build.gradle
SYS-Service-Foreground/: build.gradle
Schema-Tool-LiveData/: build.gradle
Schema-Tool-ViewBinding/: build.gradle
Schema-Tool-ViewModel/: build.gradle
Store-File-FileStore/: build.gradle
Store-KV-SharedPreferences/: build.gradle
Test/: build.gradle
UI-Common-Activity/: build.gradle
UI-Common-Fragment/: build.gradle
UI-CtrlBase-Button/: build.gradle
UI-CtrlBase-TextView/: build.gradle
UI-CtrlBase-ToggleButton/: build.gradle
UI-CtrlExt-RecyclerView/: build.gradle
UI-CtrlMD-MaterialButton/: build.gradle
UI-Layout-Constraint/: build.gradle
UI-Layout-Frame/: build.gradle
buildSrc/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
misc/keystore/: AOSP.keystore
misc/plugin/: build.gradle.kts
misc/version/: agp.toml  dependency_private_android.toml  dependency_private_java.toml  dependency_private_kotlin.toml  dependency_public_android.toml  dependency_public_java.toml  dependency_public_kotlin.toml
misc/模板/: build.gradle.kts
plugin/: build.gradle.kts
script/version/: agp.toml  app.toml  appversion.toml
模板/: build.gradle  build.gradle.kts
(+2236 files in other folders)
